--- a/examen_bringup/CMakeLists.txt
+++ b/examen_bringup/CMakeLists.txt
@@ -19,7 +19,7 @@ find_package(control_msgs REQUIRED) #for ros control
 
 
 install(
-  DIRECTORY launch rviz world src world
+  DIRECTORY launch rviz worlds src
   DESTINATION share/${PROJECT_NAME}/
 )
 
@@ -31,7 +31,7 @@ ament_python_install_package(${PROJECT_NAME})
 install(PROGRAMS
   src/trajectory_test.py
   src/tray_test.py
+  src/multi_tray.py
   DESTINATION lib/${PROJECT_NAME} )
 
 ament_package()
-
